--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= render  "shared/header" %>
+    <% if controller_name != "registrations" && controller_name != "sessions" %>
+      <%= render  "shared/header" %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
