--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
                 </a>
               </h3>
               <p class="flex items-center font-light font-sm">
-                4.8
+                <%= property.average_final_rating.round(2) %>
                 <svg
                   class="mr-1 block w-3 h-3 fill-current"
                   xmlns="http://www.w3.org/2000/svg" 
