--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,8 +57,8 @@
                 </svg>
               </p>
             </div>
-            <p class="mt-0.5 text-sm text-gray-500">Hosted by Rajat</p>
-            <p class="mt-0.5 text-sm text-gray-500">20-25 Jan</p>
+            <%# TODO: Add distance from property based on location %>
+            <p class="mt-0.5 text-sm text-gray-500"><%= property.available_dates.first %> - <%= property.available_dates.last %></p>
             <p class="mt-0.5 text-sm font-light text-black"> 
               <span class="font-medium"><%= humanized_money_with_symbol(property.price) %></span> night
             </p>
