design: modal wrap up

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -258,7 +258,7 @@
         </form>
       </div>
 
-      <div class="py-10 lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pb-16 lg:pr-8 lg:pt-6">
+      <div class="py-10 lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pr-8">
         <!-- Description and details -->
         <div class="border-t border-gray-200 pt-10 mt-4">
           <h3 class="sr-only">Description</h3>
@@ -266,18 +266,27 @@
           <div class="space-y-6">
             <p class="text-base text-gray-900"><%= @property.description.to_plain_text.truncate(500) %></p>
             <% if @property.description.to_plain_text.length > 500 %>
-              <div class="flex items-center gap-1">
+              <div 
+                data-controller="description"
+                data-action="click->description#toggleDescriptionModal"
+                class="flex items-center gap-1"
+              >
                 <span class="font-medium underline">Show more</span>
                 <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; display: block; fill: var(--f-k-smk-x);"><path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path></svg>
               </div>
+
+              <%= render "shared/modal", modalTriggerId: 'description', content: 'properties/description_modal', content_params: { description: @property.description } %>
             <% end %>
           </div>
         </div>
       </div>
+
+      <!-- Amenities -->
+      <%= render "amenities", amenities: @property.amenities %>
     </div>
 
     <!-- Reviews -->
-    <%= render  "properties/reviews", property: @property %>
+    <%= render "reviews", property: @property %>
 
   </main>
 </div>
