--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -102,12 +102,26 @@
         <div class="flex mt-6">
           <div class="rounded-l-lg px-3 pb-1.5 pt-2.5 shadow-sm ring-1 ring-inset ring-gray-400 focus-within:ring-2 focus-within:ring-indigo-600">
             <label for="checkin" class="block text-xs font-medium text-gray-900">Check-in</label>
-            <input type="text" name="checkin" id="checkin" class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="18/02/2024">
+            <input 
+              type="text" 
+              name="checkin" 
+              id="checkin" 
+              class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" 
+              value="<%= Date.tomorrow.strftime('%Y-%m-%d') %>"
+              data-booking-target="checkin"
+            >
           </div>
 
           <div class="rounded-r-lg px-3 pb-1.5 pt-2.5 shadow-sm ring-1 ring-inset ring-gray-400 focus-within:ring-2 focus-within:ring-indigo-600">
             <label for="checkout" class="block text-xs font-medium text-gray-900">Check-out</label>
-            <input type="text" name="checkout" id="checkout" class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="20/02/2024">
+            <input 
+              type="text" 
+              name="checkout" 
+              id="checkout" 
+              class="block w-full border-0 p-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" 
+              value="<%= (Date.tomorrow + 1.day).strftime('%Y-%m-%d') %>"
+              data-booking-target="checkout"
+            >
           </div>
         </div>
         <button 
@@ -118,7 +132,7 @@
         <p class="font-light text-center text-sm py-4">You won't be charged yet</p>
         <div class="mt-4">
           <div class="flex justify-between font-light">
-            <p><%= humanized_money_with_symbol(@property.price) %> x <span data-booking-target="numberOfNights"></span> nights</p>
+            <p><%= humanized_money_with_symbol(@property.price) %> x <span data-booking-target="numberOfNights"></span> night</p>
             <p><%= currency_symbol %><span data-booking-target="baseFare">0</span></p>
           </div>
           <div class="flex justify-between font-light mt-4">
