--- a/app/views/properties/_amenities.html.erb
+++ b/app/views/properties/_amenities.html.erb
@@ -17,7 +17,7 @@
         type="button" 
         data-controller="amenities"
         data-action="click->amenities#toggleAmenitiesModal"
-        class="mt-8 rounded-md bg-white px-4 py-3 text-sm font-medium text-gray-900 text-lg ring-1 ring-inset ring-black hover:bg-gray-50"
+        class="mt-8 rounded-md bg-white px-4 py-3 font-medium text-gray-900 text-lg ring-1 ring-inset ring-black hover:bg-gray-50"
       >
         Show all <%= amenities.count %> amenities
       </button>
