--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -94,6 +94,7 @@
         class="mt-4 lg:mt-0 border rounded-xl p-6 shadow-xl h-auto"
         data-controller="booking"
         data-per-night-price="<%= humanized_money(@property.price) %>"
+        data-blocked-dates="<%= @blocked_dates %>"
       >
         <h2 class="sr-only">Booking information</h2>
         <p class="text-lg font-light tracking-tight text-gray-900">
@@ -126,6 +127,8 @@
         </div>
         <button 
           type="submit" 
+          data-action="click->booking#reserveProperty"
+          data-reserve-property-url="<%= new_property_booking_path(@property) %>"
           class="mt-4 flex w-full items-center justify-center rounded-md border border-transparent bg-primary px-8 py-3 text-base font-medium text-white hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2">
           Reserve
         </button>
